workspace/log/build_2023-11-06_17-14-03/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_land_request(float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:463:36: error: no match for ‘operator>’ (operand types are ‘TemplateDroneControl::GlobalPose’ and ‘double’)
  463 |                 while (global_pose > 0.15)
      |                        ~~~~~~~~~~~ ^ ~~~~
      |                        |             |
      |                        |             double
      |                        TemplateDroneControl::GlobalPose
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
